--- a/index.html
+++ b/index.html
@@ -42,6 +42,98 @@
 						</div>
 					</div>
 				</div>
+				<!-- page 1 & 2 -->
+				<div class="book-page page-right turn" id="turn-1">
+					<!-- page 1 (work experience)  -->
+					<div class="page-front">
+						<h1 class="title">Work Experience</h1>
+						<div class="work-education-box">
+							<div class="work-education-content">
+								<span class="year">
+									<i class="bx bx-calendar"></i> 2023 - 2024</span
+								>
+								<h3>Frontend Develoepr - Company-name</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Delectus fuga aliquam totam animi obcaecati molestiae porro
+									mollitia.
+								</p>
+							</div>
+							<div class="work-education-content">
+								<span class="year">
+									<i class="bx bx-calendar"></i> 2023 - 2024</span
+								>
+								<h3>Frontend Develoepr - Company-name</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Delectus fuga aliquam totam animi obcaecati molestiae porro
+									mollitia.
+								</p>
+							</div>
+							<div class="work-education-content">
+								<span class="year">
+									<i class="bx bx-calendar"></i> 2023 - 2024</span
+								>
+								<h3>Frontend Develoepr - Company-name</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Delectus fuga aliquam totam animi obcaecati molestiae porro
+									mollitia. Eveniet, culpa!
+								</p>
+							</div>
+						</div>
+						<span class="page-number">1</span>
+						<!-- next-prev btn  -->
+						<span class="nextPrev-btn" data-page="turn-1">
+							<i class="bx bx-chevron-right"></i>
+						</span>
+					</div>
+					<!-- page 2 (education)  -->
+					<div class="page-back">
+						<h1 class="title">Education</h1>
+						<div class="work-education-box">
+							<div class="work-education-content">
+								<span class="year">
+									<i class="bx bx-calendar"></i> 2023 - 2024</span
+								>
+								<h3>Education Degree - University</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Delectus fuga aliquam totam animi obcaecati molestiae porro
+									mollitia.
+								</p>
+							</div>
+							<div class="work-education-content">
+								<span class="year">
+									<i class="bx bx-calendar"></i> 2023 - 2024</span
+								>
+								<h3>Education Degree - University</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Delectus fuga aliquam totam animi obcaecati molestiae porro
+									mollitia.
+								</p>
+							</div>
+							<div class="work-education-content">
+								<span class="year">
+									<i class="bx bx-calendar"></i> 2023 - 2024</span
+								>
+								<h3>Education Degree - University</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Delectus fuga aliquam totam animi obcaecati molestiae porro
+									mollitia. Eveniet, culpa!
+								</p>
+							</div>
+						</div>
+
+						<span class="page-number">2</span>
+						<!-- next-prev btn  -->
+						<span class="nextPrev-btn back" data-page="turn-1">
+							<i class="bx bx-chevron-left"></i>
+						</span>
+					</div>
+				</div>
 			</div>
 		</div>
 		<!-- js file for script  -->
