--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="wrapper">
 			<div class="cover cover-left"> </div>
-			<div class="cover cover-right turn"></div>
+			<div class="cover cover-right"></div>
 
 			<!-- profile page  -->
 			<div class="book">
@@ -132,6 +132,147 @@
 						<span class="nextPrev-btn back" data-page="turn-1">
 							<i class="bx bx-chevron-left"></i>
 						</span>
+					</div>
+				</div>
+				<!-- page 3 & 4 -->
+				<div class="book-page page-right turn" id="turn-2">
+					<!-- page 3 (services) -->
+					<div class="page-front">
+						<h1 class="title">My Services</h1>
+						<div class="services-box">
+							<div class="services-box-content">
+								<i class="bx bx-code-alt"></i>
+								<h3>web development</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+								<a href="/#" class="btn">read more</a>
+							</div>
+							<div class="services-box-content">
+								<i class="bx bx-code-alt"></i>
+								<h3>web development</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+								<a href="/#" class="btn">read more</a>
+							</div>
+							<div class="services-box-content">
+								<i class="bx bx-code-alt"></i>
+								<h3>web development</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+								<a href="/#" class="btn">read more</a>
+							</div>
+							<div class="services-box-content">
+								<i class="bx bx-code-alt"></i>
+								<h3>web development</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+								<a href="/#" class="btn">read more</a>
+							</div>
+						</div>
+
+						<span class="page-number">3</span>
+						<!-- next-prev btn  -->
+						<span class="nextPrev-btn" data-page="turn-2">
+							<i class="bx bx-chevron-right"></i>
+						</span>
+					</div>
+
+					<!-- page 4 (skills) -->
+					<div class="page-back">
+						<h1 class="title">My Skills</h1>
+						<div class="skills-box">
+							<div class="skills-content">
+								<h3>Front-End</h3>
+								<div class="contents">
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+								</div>
+							</div>
+							<div class="skills-content">
+								<h3>Backend-End</h3>
+								<div class="contents">
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+								</div>
+							</div>
+							<div class="skills-content">
+								<h3>Backend-End</h3>
+								<div class="contents">
+									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-html5"></i>HTML</span>
+								</div>
+							</div>
+						</div>
+						<span class="page-number">4</span>
+						<!-- next-prev btn  -->
+						<span class="nextPrev-btn back" data-page="turn-2">
+							<i class="bx bx-chevron-left"></i>
+						</span>
+					</div>
+				</div>
+				<!-- page 5 & 6 -->
+				<div class="book-page page-right turn" id="turn-3">
+					<!-- page 5 (latest or portfolio) -->
+					<div class="page-front">
+						<h1 class="title">Latest project</h1>
+						<div class="portfolio-box">
+							<div class="img-box">
+								<img src="https://via.placeholder.com/400x250" alt="" />
+							</div>
+							<div class="info-box">
+								<div class="info-title">
+									<h3>Project name</h3>
+									<a href="">live preview <i class="bx bx-link-external"></i></a>
+								</div>
+								<p>Tech used : </p>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+									quaerat.
+								</p>
+								<div class="btn-box">
+									<a href="/#" class="btn">source code</a>
+									<a href="/#" class="btn">more projects</a>
+								</div>
+							</div>
+						</div>
+
+						<span class="page-number">5</span>
+						<!-- next-prev btn  -->
+						<span class="nextPrev-btn" data-page="turn-3">
+							<i class="bx bx-chevron-right"></i>
+						</span>
+					</div>
+					<!-- page 6 (contact me) -->
+					<div class="page-back">
+						<h1 class="title">contact me</h1>
+						<div class="contact-box">
+							<form action="#">
+								<input type="text" class="field" placeholder="Full Name" required />
+								<input
+									type="email"
+									class="field"
+									placeholder="Email Address"
+									required />
+								<textarea
+									name=""
+									id=""
+									cols="30"
+									rows="10"
+									class="field"
+									placeholder="Your Message"></textarea>
+								<input type="submit" value="Send Message" class="btn" />
+							</form>
+						</div>
+						<span class="page-number">6</span>
+						<!-- next-prev btn  -->
+						<span class="nextPrev-btn back" data-page="turn-3">
+							<i class="bx bx-chevron-left"></i>
+						</span>
+						<a href="/#" class="back-rpofile">
+							<p>Profile</p>
+							<i class="bx bxs-user"></i>
+						</a>
 					</div>
 				</div>
 			</div>
