--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="book">
 				<div class="book-page page-left">
 					<div class="profile-page">
-						<img src="https://via.placeholder.com/200" alt="" />
+						<img src="./img/jaya.JPEG" alt="jaya my love!" />
 						<h1>Masudur Rahman</h1>
 						<h3>Front-End Developer</h3>
 						<div class="social-media">
@@ -218,7 +218,7 @@
 						<h1 class="title">Latest project</h1>
 						<div class="portfolio-box">
 							<div class="img-box">
-								<img src="https://via.placeholder.com/400x250" alt="" />
+								<img src="./img/jaya-buri.JPEG" alt="jaya-buri my love!" />
 							</div>
 							<div class="info-box">
 								<div class="info-title">
