--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 						<h3>Front-End Developer</h3>
 						<div class="social-media">
 							<a href="/#"><i class="bx bxl-facebook"></i></a>
-							<a href="/#"><i class="bx bxl-facebook"></i></a>
-							<a href="/#"><i class="bx bxl-facebook"></i></a>
-							<a href="/#"><i class="bx bxl-facebook"></i></a>
-							<a href="/#"><i class="bx bxl-facebook"></i></a>
+							<a href="/#"><i class="bx bxl-twitter"></i></a>
+							<a href="/#"><i class="bx bxl-instagram"></i></a>
+							<a href="/#"><i class="bx bxl-linkedin"></i></a>
 						</div>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
@@ -181,26 +180,27 @@
 								<h3>Front-End</h3>
 								<div class="contents">
 									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-css3"></i>CSS</span>
+									<span><i class="bx bxl-bootstrap"></i>Bootstrap</span>
+									<span><i class="bx bxl-tailwind-css"></i>Tailwind</span>
+									<span><i class="bx bxl-javascript"></i>JaveScript</span>
+									<span><i class="bx bxl-react"></i>React</span>
 								</div>
 							</div>
 							<div class="skills-content">
 								<h3>Backend-End</h3>
 								<div class="contents">
-									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-nodejs"></i>Node</span>
+									<span><i class="bx bxl-python"></i>python</span>
+									<span><i class="bx bxl-java"></i>java</span>
+									<span><i class="bx bxl-php"></i>php</span>
 								</div>
 							</div>
 							<div class="skills-content">
 								<h3>Backend-End</h3>
 								<div class="contents">
-									<span><i class="bx bxl-html5"></i>HTML</span>
-									<span><i class="bx bxl-html5"></i>HTML</span>
+									<span><i class="bx bxl-figma"></i>Figma</span>
+									<span><i class="bx bxl-adobe"></i>Adobe</span>
 								</div>
 							</div>
 						</div>
@@ -245,7 +245,7 @@
 					</div>
 					<!-- page 6 (contact me) -->
 					<div class="page-back">
-						<h1 class="title">contact me</h1>
+						<h1 class="title">Contact Me</h1>
 						<div class="contact-box">
 							<form action="#">
 								<input type="text" class="field" placeholder="Full Name" required />
