--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="book-page page-left">
 					<div class="profile-page">
 						<img src="./img/jaya.JPEG" alt="jaya my love!" />
-						<h1>Masudur Rahman</h1>
+						<h1>Jaya Buri</h1>
 						<h3>Front-End Developer</h3>
 						<div class="social-media">
 							<a href="/#"><i class="bx bxl-facebook"></i></a>
@@ -36,8 +36,8 @@
 							dolorum eaque praesentium eos.
 						</p>
 						<div class="btn-box">
-							<a href="/#" class="btn">Download CV</a>
-							<a href="/#" class="btn contact-me">Contact me</a>
+							<button class="btn">Download CV</button>
+							<button class="btn contact-me">Contact me</button>
 						</div>
 					</div>
 				</div>
@@ -269,10 +269,10 @@
 						<span class="nextPrev-btn back" data-page="turn-3">
 							<i class="bx bx-chevron-left"></i>
 						</span>
-						<a href="/#" class="back-rpofile">
+						<button class="back-rpofile">
 							<p>Profile</p>
 							<i class="bx bxs-user"></i>
-						</a>
+						</button>
 					</div>
 				</div>
 			</div>
