image are updated

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<div class="book">
 				<div class="book-page page-left">
 					<div class="profile-page">
-						<img src="./img/jaya.JPEG" alt="jaya my love!" />
-						<h1>Jaya Buri</h1>
+						<img src="./img/masudCopy.jpg" alt="Masud Front-end Develoepr" />
+						<h1>Masudur Rahman</h1>
 						<h3>Front-End Developer</h3>
 						<div class="social-media">
 							<a href="/#"><i class="bx bxl-facebook"></i></a>
@@ -218,7 +218,9 @@
 						<h1 class="title">Latest project</h1>
 						<div class="portfolio-box">
 							<div class="img-box">
-								<img src="./img/jaya-buri.JPEG" alt="jaya-buri my love!" />
+								<img
+									src="./img/emile-perron-xrVDYZRGdw4-unsplash.jpg"
+									alt="Project Front-end" />
 							</div>
 							<div class="info-box">
 								<div class="info-title">
